# Sentinel-AI-Desktop

./: .gitignore  =1.2.0  AGENTS.md  AGENTS_OVERVIEW.md  ARCHITECTURE_DIAGRAM.txt  AUTO_PLAY_FIX.md  CLAUDE.md  CONVERSATION_MODE.md  ELEVENLABS_SETUP.md  ENHANCEMENTS.md  GOOGLE_MEET_SETUP.md  MEETING_QUICKSTART.md  README.md  REBUILD_PLAN.md  SCREENSHOT_FEATURE.md  TTS_QUICKSTART.md  VOICE_COMMANDS.md  WHATS_NEW.md  cleanup_duplicate_tokens.py  cleanup_duplicates_auto.py  delete_old_token.py  dev_tasks.py  launcher.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup_launcher.py  test_threading.py  user_context.json  verify_token_source.py
.github/workflows/: release.yml
Sentinel-AI-Backend/: .cache  .env.example  CHANGELOG_SCREENSHOT.md  main.py  requirements.txt  test_productivity_simple.py
Sentinel-AI-Backend/src/agents/: agent_node.py
Sentinel-AI-Backend/src/graph/: agent_registry.py  agent_state.py  graph_builder.py
Sentinel-AI-Backend/src/tools/: browser_tools.py  email_tools.py  meeting_tools.py  music_tools.py  notes_tools.py  playwright_music_tools.py  productivity_tools.py  system_tools.py
Sentinel-AI-Backend/src/utils/: agent_memory.py  container.py  langgraph_router.py  llm_config.py  log_config.py  orchestrator.py  speech_recognizer.py  spotify_user_auth.py  text_to_speech.py  token_manager.py  wake_word_listener.py
Sentinel-AI-Backend/src/wakeword/: Sentinel_en_windows_v3_0_0.ppn
Sentinel-AI-Backend/testing/: test_productivity_agent.py  test_screenshot_simple.py  test_system_agent.py
Sentinel-AI-Frontend/: fix_token.py  main.py  requirements.txt  user_context.json
Sentinel-AI-Frontend/auth/: __init__.py  keyring_auth.py  session_manager.py
Sentinel-AI-Frontend/config/: database_config.py
Sentinel-AI-Frontend/database/: settings_service.py  user_service.py
Sentinel-AI-Frontend/devTest/: test_atlas_connection.py
Sentinel-AI-Frontend/services/: meet_service.py  service_manager.py  spotify_service.py  token_store.py
Sentinel-AI-Frontend/ui/: __init__.py
Sentinel-AI-Frontend/ui/qss/: dashboard.qss  settings.qss  style.qss
Sentinel-AI-Frontend/ui/utils/: __init__.py  animations.py
Sentinel-AI-Frontend/ui/views/: __init__.py  dashboard.py  login_page.py  logs_page.py  settings_page.py  signup_page.py
Sentinel-AI-Frontend/ui/widgets/: __init__.py  loading_spinner.py  modern_button.py  toast_notification.py
Sentinel-AI-Frontend/utils/: user_context_writer.py
app/: README.md  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: ui.tsx
app/src/lib/: api.ts  types.ts  updater.ts
app/src/state/: store.ts
app/src/views/: Connections.tsx  Home.tsx  Logs.tsx  Settings.tsx  Workspaces.tsx
docs/: ENHANCEMENTS.md  MULTIPLE_LLM_PROVIDERS_IMPLEMENTATION.md  PRODUCTIVITY_AGENT.md  PRODUCTIVITY_AGENT_SUMMARY.md  README.md  SYSTEM_CONTROL_AGENT.md  paper.md
integration/: IMPORT_WARNINGS.md  __init__.py  backend_runner.py  backend_runner_v2.py  communication.py  event_bus.py  frontend_enhancer.py  requirements.txt  status_widget.py
mcp-windows/: README.md  mcp_entry.py  pyproject.toml
mcp-windows/src/sentinel_mcp_windows/: __init__.py  bluetooth.py  files.py  night_light.py  radios.py  server.py  theme.py  workspaces.py
packaging/: README.md  core_entry.py  sentinel-core.spec
sentinel_core/: __init__.py  __main__.py  app.py  config.py  embeddings.py  events.py  google_auth.py  llm.py  notify.py  service.py  store.py  workspaces.py
sentinel_core/agents/: graph.py  registry.py
sentinel_core/tools/: __init__.py  browser.py  coder.py  documents.py  email.py  meeting.py  meeting_notes.py  memory.py  music.py  notes.py  productivity.py  screen.py  telegram.py  ui_control.py
sentinel_core/voice/: __init__.py  pipeline.py  stt.py  tts.py  vad.py  wake.py
