[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["dev_tasks.py"]

[project]
name = "sentinel-ai-desktop"
version = "0.1.0"
description = "Sentinel AI Desktop launcher + backend + frontend"
requires-python = ">=3.11,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]

package = [
    "pyinstaller>=6.11",
]

core = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "langgraph>=0.4.3",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langchain-ollama>=0.3.4",
    "keyring>=24.0.0",
    "python-dotenv>=1.1.0",
    "spotipy>=2.25.1",
    "google-auth>=2.40.2",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.154.0",
    "beautifulsoup4>=4.13.4",
    "Pillow>=11.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "mcp>=1.2",
    "langchain-mcp-adapters>=0.1.0",
    "PyAudio>=0.2.14",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.20",
    "SpeechRecognition>=3.14.2",
    "pyttsx3>=2.90",
]

[project.scripts]
lint = "dev_tasks:lint"
format = "dev_tasks:format"
typecheck = "dev_tasks:typecheck"

[tool.uv]
package = true
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
# Ruff formatter is the sole formatter — no black, no isort
