[project]
name = "sentinel-mcp-windows"
version = "0.1.0"
description = "Standalone MCP server exposing Windows system control tools (volume, brightness, media, apps, windows, power) over stdio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "pycaw",
    "comtypes",
    "screen-brightness-control",
    "psutil",
    "Pillow",
]

[project.scripts]
sentinel-mcp-windows = "sentinel_mcp_windows.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_mcp_windows"]
